--- a/url2.html
+++ b/url2.html
@@ -3,7 +3,7 @@
 <html lang="cn">
 <head>
 	<meta charset="UTF-8">
-	<title>爬虫练习 列表 class | 莫烦 Python</title>
+	<title>爬虫练习 列表 class | 海事大学Python</title>
 	<style>
 	.party {
 		background-color: yellow;
